--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-	<head> 
-		<title>LASTNAME Chapter11HandsOnExercise</title> 
-		<meta charset="utf-8"> 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Michael Chapter11HandsOnExercise</title>
+		<meta charset="utf-8">
 		<style>
-		
-		</style>
-	</head> 
-<body> 
 
-</body> 
-</html> 
+body {font-family: Verdana, Arial, sans-serif;
+	  background-color: #00005D;
+}
+#wrapper { background-color: #b3c7e6;
+		   color: #000066;
+		   width: 90%;
+		   margin: auto;
+		   min-width: 450px;
+		   max-width: 1020px;
+}
+header { background-color: #869dc7;
+		color: #00005D;
+		padding: 10px;
+		text-align: center;
+}
+
+main { background-color: #ffffff;
+		   color: #000000;
+		   padding: 10px 20px;
+		   overflow: auto;
+}
+
+
+
+footer {font-size:70%;
+		 text-align: center;
+		 padding: 10px;
+		 background-color: #869dc7;
+		 clear: both;
+}
+
+#link {text-align: center;}
+
+
+
+		</style>
+	</head>
+<body>
+		<div id="wrapper">
+			<header>
+				Chapter 11 Exercise
+			</header>
+<main>
+	<h3>Five Helpful Facts About Copyright Law and the Web</h2>
+<details>
+<summary>Fact 1</summary>
+<p>Copyright work made after January 1, 1978, lasts 70 years after the author passes.</p>
+</details>
+<details>
+<summary>Fact 2</summary>
+<p>Joint work made by two or more authors causes the copyright to stay in effect until the last author dies and 70 years after.</p>
+</details>
+<details>
+<summary>Fact 3</summary>
+<p>Anyone interested in a copyright may at any time record a statement of the date of death of the author of the copyrighted work.</p>
+</details>
+<details>
+<summary>Fact 4</summary>
+<p>Copyright in work created before January 1, 1978, but not in the public domain, subsists from January 1, 1978, and endures for the term by section 302.</p>
+</details>
+<details>
+<summary>Fact 5</summary>
+<p>Any work copyrighted by a corporate body shall be entitled to a renewal and extension of the copyright.</p>
+</details>
+<br>
+<div id="link">
+	<a href="https://copyright.gov/title17/92chap3.html"> References </a>
+</div>
+	</main>
+<footer>Michael Mullins s533392@nwmissouri.edu</footer>
+</div>
+</body>
+</html>
